syntax = "proto3";

option go_package = "github.com/flexzuu/benchmark/micro-service/grpc/post/post";

import "google/protobuf/empty.proto";

package post;

service PostService {
  // Get a single Post by ID
  rpc GetById(GetPostRequest) returns (Post) {}
  rpc List(ListPostsRequest) returns (ListPostsResponse) {}
  rpc ListOfAuthor(ListPostsOfAuthorRequest) returns (ListPostsResponse) {}
  // Create a single Post validates if the passed AuthorId is valid
  rpc Create (CreatePostRequest) returns (Post) {}
  // Delete a single Post by ID
  rpc Delete (DeletePostRequest) returns (google.protobuf.Empty) {}
}

// The request message containing the ID
message GetPostRequest {
  int64 ID = 1;
}
//
message ListPostsRequest {
}
//
message ListPostsOfAuthorRequest {
  int64 AuthorID = 1;
}

// The request message containing the ID
message CreatePostRequest {
  int64 authorID = 1;
  string headline = 2;
  string content = 3; // markdown
}

// The request message containing the ID
message DeletePostRequest {
  int64 ID = 1;
}

// A list of Posts
message ListPostsResponse {
  repeated Post posts = 1;
}

message Post {
  int64 ID = 1;
  int64 authorID = 2;
  string headline = 3;
  string content = 4; // markdown
}